# django_test_parameters_of_fields

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: example.py  index.html  usage.html
docs/source/: conf.py
src/expected_classes/: expected_model.py
src/expected_model/: expected_model.py  expected_view.py
test_project/test_app/: models.py  tests_models.py  tests_views.py  views.py
tests/test_project/: db.sqlite3
tests/test_project/test_app/: tests.py
tests/test_project/test_app/tests/: tests_models.py
tests/test_project/test_project/: settings.py
