[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django_test_parameters_of_models"
version = "1.0.0"
authors = [
  { name="nongreen", email="pnikita1405@mail.ru" },
]
description = "Module for simple test parameters of model fields. It compares values of field parameters with expected. It needs for avoid random changes of parameters."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nongreen/django_test_parameters_of_fields"